cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/loc_inv.run.err
WARNING: File "event_based/conversion_tests/loc_inv.cif": Semantic warning at line 21, column 21: Event "e" is not in the synchronization, send or receive alphabet of the specification, and thus will never occur; restricting it has no effect.
WARNING: File "event_based/conversion_tests/loc_inv.cif": Semantic warning at line 22, column 21: Event "e" is not in the synchronization, send or receive alphabet of the specification, and thus will never occur; restricting it has no effect.
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/loc_inv.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ---------------------------
  (1/1) An invariant is used.
  ---------------------------
   * In automaton "p":
     - plant invariant false;
             ^
     - plant invariant e needs false;
             ^
